[gd_scene load_steps=7 format=3 uid="uid://du5rukrtpc18i"]

[ext_resource type="Script" path="res://Demo/Scripts/MainMenuHUD.gd" id="1_4ennl"]
[ext_resource type="Theme" uid="uid://bdae218hxrhbu" path="res://Demo/Resources/UITheme.tres" id="1_7yjh2"]
[ext_resource type="FontFile" path="res://Demo/Assets/font.tres" id="2_05bfu"]
[ext_resource type="FontFile" uid="uid://d32b7pvjk5d7s" path="res://Demo/Assets/DePixelSchmal.ttf" id="3_6hp77"]

[sub_resource type="FontFile" id="14"]
fallbacks = Array[Font]([ExtResource("3_6hp77")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="15"]
fallbacks = Array[Font]([ExtResource("3_6hp77")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="CanvasLayer" type="CanvasLayer"]
offset = Vector2(50, 0)
scale = Vector2(2, 2)
transform = Transform2D(2, 0, 0, 2, 50, 0)
script = ExtResource("1_4ennl")

[node name="Label" type="Label" parent="."]
offset_left = 4.0
offset_top = 60.0
offset_right = 260.0
offset_bottom = 79.0
theme = ExtResource("1_7yjh2")
theme_override_fonts/font = ExtResource("2_05bfu")
text = "Select a Track"

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(67.072, 43.6001)
scale = Vector2(1.088, 0.399999)
points = PackedVector2Array(176, 96, -64, 96)
width = 5.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -8.0
offset_top = 32.0
offset_right = 32.0
offset_bottom = 72.0
theme = ExtResource("1_7yjh2")

[node name="Button1" type="Button" parent="Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 64.0
offset_right = 89.0
offset_bottom = 84.0
text = "Track 1"

[node name="Button2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 112.0
offset_top = 64.0
offset_right = 169.0
offset_bottom = 84.0
text = "Track 2"

[node name="Button3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 192.0
offset_top = 64.0
offset_right = 249.0
offset_bottom = 84.0
text = "Track 3"

[node name="Button4" type="Button" parent="Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 108.0
offset_right = 89.0
offset_bottom = 128.0
text = "Track 4"

[node name="Button5" type="Button" parent="Control"]
layout_mode = 0
offset_left = 112.0
offset_top = 108.0
offset_right = 169.0
offset_bottom = 128.0
text = "Track 5"

[node name="Button6" type="Button" parent="Control"]
layout_mode = 0
offset_left = 192.0
offset_top = 108.0
offset_right = 249.0
offset_bottom = 128.0
text = "Track 6"

[node name="Title" type="Label" parent="."]
offset_left = -8.0
offset_top = 20.0
offset_right = 270.0
offset_bottom = 48.0
scale = Vector2(0.962034, 0.962034)
pivot_offset = Vector2(139, 14)
theme = ExtResource("1_7yjh2")
theme_override_fonts/font = SubResource("14")
text = "2D Train Sim Demo"

[node name="Footer" type="Label" parent="."]
offset_top = 284.0
offset_right = 511.0
offset_bottom = 302.0
theme = ExtResource("1_7yjh2")
theme_override_colors/font_color = Color(0.670588, 0.670588, 0.670588, 1)
theme_override_fonts/font = SubResource("15")
text = "Moonbench Games 2023"

[connection signal="pressed" from="Control/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Control/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Control/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Control/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Control/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Control/Button6" to="." method="_on_button_6_pressed"]
